--- a/app/styles.css
+++ b/app/styles.css
@@ -1,6 +1,6 @@
-
+/* 
 /* this iss the custom button */
-.boton-elegante {
+ .boton-elegante {
     padding: 15px 30px;
     border: 2px solid #2c2c2c;
     background-color: #1a1a1a;
@@ -39,4 +39,4 @@
     border-color: #666666;
     background: #292929;
   }
-  
+   
